# cloudflare-ddns

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  RELEASE_NOTES_2.1.1.md  RELEASE_NOTES_2.1.2.md  RELEASE_NOTES_2.2.0.md  SECURITY.md  build-docker-image.sh  cloudflare-ddns-enhanced.py  cloudflare-ddns.py  config-example.json  config.json  docker-build-all.sh  docker-build.sh  docker-compose.yml  docker-publish.sh  docker-run.sh  env-example  requirements.txt  start-sync.sh  sync
.github/: FUNDING.yml  dependabot.yml  release-drafter.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: helm.yml  image.yml  release-drafter.yml
charts/cloudflare-ddns/: .helmignore  Chart.yaml  values.yaml
charts/cloudflare-ddns/templates/: _helpers.tpl  deployment.yaml  secret.yaml
deployments/helm/chart/: Chart.yaml  values.yaml
deployments/helm/chart/templates/: _helpers.tpl  config.yaml  deployment.yaml  hpa.yaml  serviceaccount.yaml
docker/: docker-compose-env.yml  docker-compose.yml
examples/k8s/: README.md  cloudflare-ddns-Deployment.yaml
k8s/: cloudflare-ddns.yml
scripts/: docker-build-all.sh  docker-build.sh  docker-publish.sh  docker-run.sh
src/: cf_ip_filter.rs  cloudflare.rs  config.rs  docker.rs  domain.rs  main.rs  notifier.rs  pp.rs  provider.rs  updater.rs
systemd/: cloudflare-ddns.service  cloudflare-ddns.timer
